--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,8 @@
     "@mui/icons-material": "^7.1.0",
     "@mui/material": "^6.4.11",
     "react": "^19.0.0-rc.1",
-    "react-dom": "^19.0.0-rc.1"
+    "react-dom": "^19.0.0-rc.1",
+    "react-router-dom": "^7.6.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
